<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    android:textSize="@dimen/titulo"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitulo"
                    android:textSize="@dimen/subtitulo"
                    android:layout_marginTop="@dimen/margenTop" />
                <View
                    android:layout_width="@dimen/barraAncho"
                    android:layout_height="@dimen/barraAlto"
                    android:background="@color/colorWhite"
                    android:layout_margin="@dimen/margenBottom"
                    android:layout_gravity="center_horizontal"></View>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:textSize="@dimen/signin"
                    android:gravity="center_horizontal"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname"
                    android:layout_marginRight="@dimen/margen"
                    android:layout_marginLeft="@dimen/margen"
                    android:layout_marginTop="@dimen/margenTop"
                    android:inputType="textCapWords"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/margen"
                    android:layout_marginLeft="@dimen/margen"
                    android:layout_marginTop="@dimen/margenTop"
                    android:inputType="textEmailAddress"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/margen"
                    android:layout_marginLeft="@dimen/margen"
                    android:layout_marginTop="@dimen/margenTop"
                    android:inputType="number"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="25sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textSize="11sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textSize="11sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textSize="11sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="11sp"
        android:gravity="center_horizontal"
        android:layout_above="@+id/llDesc"
        android:layout_marginBottom="3dp"/>
</RelativeLayout>